updated package dependenies to latest + added z-index of 1 to the portfolio card-container to ensure was on top

--- a/src/css/_sec-portfolio.scss
+++ b/src/css/_sec-portfolio.scss
@@ -138,6 +138,7 @@
           position: relative;
           height: 100%;
           width: 100%;
+          z-index: 1;
 
           &:hover .projects__info {
             opacity: 1;
